--- a/CustomerInformation.API/appsettings.Development.json
+++ b/CustomerInformation.API/appsettings.Development.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=COMMONSQL02;Database=HR_PROD_202201;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "##"
   },
-  //güvenlik amacýyla sildim
+  //gÃ¼venlik amacÃ½yla sildim
   "RedisConnection": "##",
   "RedisInstance": "HR.Harmony_",
-  //güvenlik amacýyla sildim
-  "ElasticsearchConnection": "http://128.128.15.142:9201",
+  //gÃ¼venlik amacÃ½yla sildim
+  "ElasticsearchConnection": "##",
   "DomainLogging": true,
   "RollingFilePathFormat": "C:\\logs\\api\\hr_harmony\\log-{Date}.txt",
   "Serilog": {
@@ -39,7 +39,7 @@
       {
         "Name": "Elasticsearch",
         "Args": {
-          //güvenlik amacýyla sildim
+          //gÃ¼venlik amacÃ½yla sildim
           "nodeUris": "##",
           "indexFormat": "hr.harmony-{0:yyyy-MM-dd}",
           "restrictedToMinimumLevel": "Information"
